# rust-pi-harness

./: .gitignore  .rustfmt.toml  Cargo.toml  GETTING_STARTED.md  README.md  TEMPLATE_GUIDE.md  cargo-generate.toml  package.json
.github/workflows/: ci.yml
.pi/: settings.json  team_config.md
.pi/agents/: architect.md  coder.md  documenter.md  facilitator.md  orchestrator.md  researcher.md  validator.md
.pi/extensions/: team_manager.ts  team_status.ts
.pi/prompts/: feasibility.md  fstudy.md  init.md
.pi/skills/cargo/: SKILL.md
.pi/skills/git/: SKILL.md
.pi/skills/mermaid/: SKILL.md
.pi/skills/tdd/: SKILL.md
src/: main.rs
