[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{author-name}}"]
edition = "{{rust-edition}}"
description = "{{project-description}}"
license = "{{license}}"

[dependencies]
# Add your dependencies here
# tokio = { version = "1", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }
# anyhow = "1.0"

[dev-dependencies]
# Add dev-dependencies here
