[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{author-name}}"]
edition = "{{rust-edition}}"
description = "{{project-description}}"
license = "{{license}}"

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
